todoyu core changelog

core 2.1.0 - not released yet
	* Feature: added method for creation of random named cache folders to TodoyuFileManager
	* Feature: extended TodoyuFileManager::getFolderContents with option to retrieve file stats
	* Feature: Added reference to famfamfam silk icons in third party info of about popup
	* Feature: Added onchange validation of manually edited date/datetime fields
	* Changed: Added globally used icons (unacknowledged/acknowledged/modified/accepted/emailed) to core
	* Feature: Added TodoyuMailManager (DB table system_log_email) for logging of various email types
	* Changed: Removed unused DB table system_log
	* Changed: Renamed DB table system_errorlog to system_log_error
	* Feature: Added Todoyu::db()->setDeleted() wrapper method
	* Feature: Added TodoyuBaseObject::getCreatePersonID() and getCreatePerson() shortcut methods
	* Feature: Added exclamation and email icons to core standard icons
	* Feature: Added CSS for big (32x32px) confirmation icon
	* Feature: Added array helper method that merges TodoyuArray::reform() and TodoyuArray::useFieldAsIndex() => TodoyuArray::reformWithFieldAsIndex()
	* Feature: Added check for items existence before applying hooked callbacks on items (Todoyu.Hooks.exec())
	* Feature: Added calling of JS hook after quickcreate popup has been opened ('headlet.quickcreate.' + type + '.popupOpened')
	* Feature: Added Img-function to TodoyuString
	* Feature: Quickinfos are now deactivatible via JS
	* Feature: Added changelog
	* Feature: Added placeholders for to-be columbian spanish localization files of installer
	* Feature: Added large notification icons
	* Changed: Moved core classes to core/model
	* Changed: Moved document classes to core/model/document
	* Changed: Moved form classes to core/model/form
	* Changed: Removed TodoyuPanelWidgetIf
	* Changed: TodoyuPanelWidget::renderContent() only renders the content, parent class handles full render process

core 2.0.8 - not released yet